Dev route API Update populate task. Route spec integration.
