# app/models/route.rb
@@ -63,6 +63,8 @@ class Route < ApplicationRecord
   validates_presence_of :name
   validates_presence_of :date
 
+  validate :mission_bulk_validation
+
   # == Views ===============================================================
   view :all
   view :by_company, emit_key: :company_id
@@ -71,6 +73,8 @@ class Route < ApplicationRecord
 
   # == Callbacks ============================================================
   before_validation :set_sync_user
+  after_save :mission_bulk_save
+
 
   # == Class Methods ========================================================
   def self.find_by(id_or_external_ref, company_id = nil)
@@ -86,6 +90,11 @@ class Route < ApplicationRecord
   end
 
   # == Instance Methods =====================================================
+  def missions=(missions)
+    self.updated_at = Time.now.to_s # Update time manualy to force route save
+    @missions = missions.compact
+  end
+
   private
 
   def set_sync_user
@@ -95,6 +104,99 @@ class Route < ApplicationRecord
   def company_id_immutable
     if company_id_changed?
       errors.add(:company_id, I18n.t('couchbase.errors.models.user_settings.company_id_immutable'))
+    end
+  end
+
+  def external_ref_immutable
+    if external_ref_changed?
+      errors.add(:external_ref, I18n.t('couchbase.errors.models.mission.external_ref_immutable'))
+    end
+  end
+
+  def mission_bulk_validation
+    if @missions and @missions.is_a? Array
+      @missions.each do |m|
+        if m.is_a? Mission
+          m.route_id = 'fake_route_id' if !m.route_id # Fake route_id for validation
+          m.validate!
+        else
+          raise "Found invalid type : #{m.class} during bulk action, expected #{Mission}"
+        end
+      end
+    end
+  end
+
+  def mission_bulk_save
+    bucket_name = Mission.bucket.bucket
+
+    if @missions and @missions.is_a? Array
+      dates = Set.new
+
+      # 1) - Set route_id and collect date for placeholder
+      @missions.each do |mission|
+        mission.route = self
+        dates.add(mission.date.to_date)
+      end
+
+      # 2) - Prepare merge query
+      string_query =
+      "`#{bucket_name}` as mission" +
+      ' USING ' + @missions.to_json + ' as source' +
+      '  ON KEY source.id' +
+      '  WHEN MATCHED THEN' +
+      '    UPDATE SET' +
+#       '      mission.type=mission,' +
+#       '      mission.company_id=source.company_id,' +
+#       '      mission.external_ref=source.external_ref,'+
+#       '      mission.sync_user=source.sync_user,'+
+#       '      mission.mission_status_type_id=source.mission_status_type_id,' +
+      '      mission.user_id=source.user_id,'+
+      '      mission.route_id=source.route_id,' +
+      '      mission.name=source.name,' +
+      '      mission.date=source.date,' +
+      '      mission.location=source.location,' +
+      '      mission.address=source.address,' +
+      '      mission.comment=source.comment,' +
+      '      mission.phone=source.phone,' +
+      '      mission.reference=source.reference,' +
+      '      mission.duration=source.duration,' +
+      '      mission.time_windows=source.time_windows,' +
+      '      mission.eta=source.eta,' +
+      '      mission.mission_type=source.mission_type' +
+      '  WHEN NOT MATCHED THEN' +
+      '    INSERT {' +
+      '      "type": "mission",' +
+      '      "company_id": source.company_id,' +
+      '      "route_id": source.route_id,' +
+      '      "external_ref": source.external_ref,'+
+      '      "user_id": source.user_id,'+
+      '      "sync_user": source.sync_user,'+
+      '      "mission_status_type_id": source.mission_status_type_id,' +
+      '      "name": source.name,' +
+      '      "date": source.date,' +
+      '      "location": source.location,' +
+      '      "address": source.address,' +
+      '      "comment": source.comment,' +
+      '      "phone": source.phone,' +
+      '      "reference": source.reference,' +
+      '      "duration": source.duration,' +
+      '      "time_windows": source.time_windows,' +
+      '      "mission_type": source.mission_type,' +
+      '      "planned_travel_time": source.planned_travel_time,' +
+      '      "planned_distance": source.planned_distance' +
+      '    }'
+
+      # 3) - Exec merge query
+      Mission.bucket.n1ql.merge_into(string_query).results.to_a
+
+      # 4) - Update placeholder (see after_save update_placeholder method on mission model)
+      # Remove this when mobiles application version fully update
+      dates.each do |date|
+        placeholder = MissionsPlaceholder.by_date(key: [user.company_id, user.sync_user, date.strftime('%F')]).to_a.first
+        placeholder = MissionsPlaceholder.new if !placeholder
+        placeholder.assign_attributes(company_id: user.company_id, sync_user: user.sync_user, date: date.strftime('%F'), revision: placeholder.revision ? placeholder.revision + 1 : 0)
+        placeholder.save!
+      end
     end
   end
 end
